...

    <string name="app_name">BigOwlApp</string>

    <string name="send_sms">send sms</string>
    <string name="by">by</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="first_name">First Name</string>
    <string name="group_name">Group Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_search_user">Search user…</string>
    <string name="home">Home</string>
    <string name="image_url">Image URL</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="Fingerprint_authentication">Fingerprint authentication :</string>
...
    <string name="user_last_name">Last Name</string>
    <string name="user_phone_number">user_phone_number</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="create_new_schedule">Create New Schedule</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="title">Title</string>
    <string name="hh_mm">hh:mm</string>
    <string name="select_group">Select Group</string>
    <string name="users_icon">users_icon</string>
    <string name="select_users">Select User(s)</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="group_icon">group_icon</string>
    <string name="select_location">Select Location</string>
    <string name="log_out">Log out</string>
    <string name="overflow_menu">overflow menu</string>
    <string name="schedule">schedule</string>
    <string name="user">user</string>
    <string name="notification">notification</string>
    <string name="big_owl">Big Owl</string>
    <string name="search_user">Search User</string>
    <string name="enter_phone_number">Enter Phone Number</string>
...
