<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SendingRequestToSuperviseActivity">

    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:padding="8dp"
        android:text="noteText"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/note2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:padding="8dp"
        android:text="noteText2"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/note3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="385dp"
        android:padding="8dp"
        android:text="noteText3"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <include
        android:id="@+id/top_app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/sup_request"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:background="@drawable/rounded_button_reddish"
        android:text="Send a request to supervise this user"
        android:textColor="@color/lightBlack"
        tools:ignore="HardcodedText" />

</RelativeLayout>